Added Google maps

--- a/NavUp-app/app/src/main/res/values/strings.xml
+++ b/NavUp-app/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="button_guestLogin">Guest</string>
     <string name="user_email">Email@example.com</string>
     <string name="Back">Back</string>
+    <string name="title_activity_maps">NavUP_Map</string>
 </resources>
