--- a/NavUp-app/app/src/main/res/values/strings.xml
+++ b/NavUp-app/app/src/main/res/values/strings.xml
@@ -22,4 +22,8 @@
     <string name="option_get_place">Get place</string>
 
     <string name="pick_place">Choose a place</string>
+    
+    <string name="button_deletePOI">Delete</string>
+    <string name="button_updatePOI">Update</string>
+    <string name="button_done_select">Done</string>
 </resources>
