Updated LaTeX, mostly aesthetical

--- a/Users testing/main.tex
+++ b/Users testing/main.tex
@@ -1,6 +1,7 @@
 \documentclass{article}
 \usepackage[utf8]{inputenc}
 \usepackage{graphicx}
+\usepackage{float}
 
 \title{Testing Of Team Broadsword Access User }
 \author{Bernard van Tonder }
@@ -45,19 +46,20 @@
 \includegraphics[width=180mm]{4.png}
 \end{figure}
 
-
 \subsection{Register}
-\begin{figure}[ht!]
+
+\begin{figure}[H]
+    \label{tab:example}
 \hspace*{-2.5cm} 
 \includegraphics[width=180mm]{5.png}
 \end{figure}
 
-\begin{figure}[ht!]
+\begin{figure}[H]
 \hspace*{-2.5cm} 
 \includegraphics[width=180mm]{6.png}
 \end{figure}
 
-\begin{figure}[ht!]
+\begin{figure}[H]
 \hspace*{-2.5cm} 
 \includegraphics[width=180mm]{7.png}
 \end{figure}
@@ -70,16 +72,21 @@
 
 \begin{figure}[ht!]
 \hspace*{-2.5cm} 
-\includegraphics[width=180mm]{9.png}
+\includegraphics[width=180mm]{ViewTestCase.png}
 \end{figure}
 
 \subsection{Update user information}
-\begin{figure}[ht!]
+\begin{figure}[H]
+\hspace*{-2.5cm} 
+\includegraphics[width=180mm]{9.png}
+\end{figure}
+
+\begin{figure}[H]
 \hspace*{-2.5cm} 
 \includegraphics[width=180mm]{10.png}
 \end{figure}
 
-\begin{figure}[ht!]
+\begin{figure}[H]
 \hspace*{-2.5cm} 
 \includegraphics[width=180mm]{11.png}
 \end{figure}
@@ -101,6 +108,8 @@
 \includegraphics[width=180mm]{14_1.png}
 \end{figure}
 
+\clearpage
+
 \section{Non-functional requirements}
 1.	Security\\
 2.	User interface\\
@@ -119,8 +128,7 @@ o	A password is not required to change the password or any other user informatio
 
 \subsection{Performance}
 \begin{figure}[ht!]
-\hspace*{-2.5cm} 
-\includegraphics[width=80mm]{15.png}
+\includegraphics[width=60mm]{15.png}
 \end{figure}
 Performance-wise the pages were relatively fast and had nearly no noticeable loading time.
 \end{document}
