--- a/Users testing/main.tex
+++ b/Users testing/main.tex
@@ -1,15 +1,60 @@
-\documentclass{article}
-\usepackage[utf8]{inputenc}
+\documentclass[english]{article}
 \usepackage{graphicx}
+\usepackage{grffile}
+\usepackage[T1]{fontenc}
+\usepackage{babel}
 \usepackage{float}
+\usepackage{tabu}
+\usepackage{ragged2e}
+\usepackage{textcomp}
+\usepackage{amstext}
+\usepackage{pdfpages}
 
-\title{Testing Of Team Broadsword Access User }
-\author{Bernard van Tonder }
-\date{May 2017}
+\graphicspath{{/}}
 
 \begin{document}
-
+\title{Testing Of Team Broadsword Access User }
+\author{Team longsword Access }
+\date{May 2017}
 \maketitle
+
+	\begin{figure}
+		\includegraphics[width=\linewidth]{up_logo.png}
+	\end{figure}
+	
+	\begin{center}
+	 \line(1,0){370}
+	\\[0.2cm]
+    	{\scshape\Large Testing phase  \par}
+	\vspace{0.1cm}
+	\line(1,0){370}
+	\\[0.8cm]
+	
+	 {\scshape\Large Team Lisp \par}
+	\vspace{0.9cm}
+	
+	\begin{tabu} to \textwidth { X[l] X[l]}
+		\hline
+		\textbf{Surname, First Name  }	& \textbf{Student Number}	\\ \hline \hline
+		   &	\\ \hline
+		  &	\\ \hline
+		  &	\\ \hline
+	    	 &	\\ \hline
+		van der Westhuizen Idrian&15078729\\ \hline
+		 &	\\ \hline
+		\hline
+	\end{tabu}
+	
+	\end{center}
+
+	\pagenumbering{gobble}
+	\newpage
+	\tableofcontents
+
+	\pagenumbering{arabic}
+	\newpage
+
+\section{Users}
 
 \section{Service Contracts}
 1.	Authenticate user\\
@@ -132,3 +177,13 @@ o	A password is not required to change the password or any other user informatio
 \end{figure}
 Performance-wise the pages were relatively fast and had nearly no noticeable loading time.
 \end{document}
+
+\section{Notifications}
+
+\section{Data}
+
+\section{GIS}
+
+\section{Points of interest}
+
+\section{Navigation}
