--- a/main.tex
+++ b/main.tex
@@ -80,13 +80,13 @@
 \end{figure}
 
 \subsection{Login}
-\begin{figure}[ht!]
+\begin{figure}[H]
 \hspace*{-2.5cm} 
 \includegraphics[width=180mm]{3.png}
 \end{figure}
 
 
-\begin{figure}[ht!]
+\begin{figure}[H]
 \hspace*{-2.5cm} 
 \includegraphics[width=180mm]{4.png}
 \end{figure}
@@ -142,6 +142,13 @@
 \includegraphics[width=180mm]{12.png}
 \end{figure}
 
+\begin{figure}[ht!]
+\hspace*{-2.5cm} 
+\includegraphics[width=180mm]{ViewTestCase.png}
+\end{figure}
+
+\clearpage
+
 \subsection{Manage user information}
 \begin{figure}[ht!]
 \hspace*{-2.5cm} 
@@ -150,10 +157,16 @@
 
 \begin{figure}[ht!]
 \hspace*{-2.5cm} 
-\includegraphics[width=180mm]{14_1.png}
+\includegraphics[width=180mm]{14.png}
 \end{figure}
 
 \clearpage
+
+\begin{figure}[ht!]
+\center
+\includegraphics[width=60mm]{Marks.png}
+\caption{Marks}
+\end{figure}
 
 \section{Non-functional requirements}
 1.	Security\\
