Added extra bullet points and better special character display

--- a/main.tex
+++ b/main.tex
@@ -174,12 +174,13 @@
 3.	Performance\\
 
 \subsection{Security}
-•	It is possible to change your user privileges to admin by changing the status of the user in the URL to “admin” at any page.\\
-o	Once changing status to admin the users can officially give admin rights to themselves and other users.\\
-•	Users can edit their user information to be empty strings especially for the password.\\
-o	A password is not required to change the password or any other user information.\\
-•	Users can login as other users by changing the user field in the URL to any valid user name.\\
-
+\begin{itemize}
+     \item It is possible to change your user privileges to admin by changing the status of the user in the URL to 'admin' at any page.\\
+     Once changing status to admin the users can officially give admin rights to themselves and other users.
+     \item Users can edit their user information to be empty strings especially for the password.\\
+     A password is not required to change the password or any other user information.
+     \item Users can login as other users by changing the user field in the URL to any valid user name.
+   \end{itemize}
 
 \subsection{User interface}
 •	Features are hidden based on user status i.e. manage users tab is hidden to guest users, but is visible to admin users\\
