Minor change of floating table's display

--- a/main.tex
+++ b/main.tex
@@ -186,7 +186,7 @@
 •	Features are hidden based on user status i.e. manage users tab is hidden to guest users, but is visible to admin users\\
 
 \subsection{Performance}
-\begin{figure}[ht!]
+\begin{figure}[H]
 \includegraphics[width=60mm]{15.png}
 \end{figure}
 Performance-wise the pages were relatively fast and had nearly no noticeable loading time.
