--- a/main.tex
+++ b/main.tex
@@ -10,33 +10,20 @@
 \usepackage{amstext}
 \usepackage{pdfpages}
 
-\graphicspath{{/}}
+\graphicspath{{Images/}}
 
 \begin{document}
 \title{Testing Of Team Broadsword Access User }
 \author{Team longsword Access }
 \date{May 2017}
 \maketitle
-
-	\begin{figure}
-		\includegraphics[width=\linewidth]{up_logo.png}
-	\end{figure}
-	
-	\begin{center}
-	 \line(1,0){370}
-	\\[0.2cm]
-    	{\scshape\Large Testing phase  \par}
-	\vspace{0.1cm}
-	\line(1,0){370}
-	\\[0.8cm]
-	
-	 {\scshape\Large Team Lisp \par}
-	\vspace{0.9cm}
-	
+\begin{center}
+{\scshape\Large Team Lisp \par}
+\vspace{0.9cm}
 	\begin{tabu} to \textwidth { X[l] X[l]}
 		\hline
 		\textbf{Surname, First Name  }	& \textbf{Student Number}	\\ \hline \hline
-		   &	\\ \hline
+		   Merissa Joubert &15062440	\\ \hline
 		  &	\\ \hline
 		  &	\\ \hline
 	    	 &	\\ \hline
@@ -73,106 +60,84 @@
 \hspace*{-2.5cm} 
 \includegraphics[width=180mm]{1.png}
 \end{figure}
-
 \begin{figure}[ht!]
 \hspace*{-2.5cm} 
 \includegraphics[width=180mm]{2.png}
 \end{figure}
-
 \subsection{Login}
 \begin{figure}[H]
 \hspace*{-2.5cm} 
 \includegraphics[width=180mm]{3.png}
 \end{figure}
-
-
 \begin{figure}[H]
 \hspace*{-2.5cm} 
 \includegraphics[width=180mm]{4.png}
 \end{figure}
-
 \subsection{Register}
-
 \begin{figure}[H]
     \label{tab:example}
 \hspace*{-2.5cm} 
 \includegraphics[width=180mm]{5.png}
 \end{figure}
-
 \begin{figure}[H]
 \hspace*{-2.5cm} 
 \includegraphics[width=180mm]{6.png}
 \end{figure}
-
 \begin{figure}[H]
 \hspace*{-2.5cm} 
 \includegraphics[width=180mm]{7.png}
 \end{figure}
-
 \subsection{View user profile}
 \begin{figure}[ht!]
 \hspace*{-2.5cm} 
 \includegraphics[width=180mm]{8.png}
 \end{figure}
-
 \begin{figure}[ht!]
 \hspace*{-2.5cm} 
 \includegraphics[width=180mm]{ViewTestCase.png}
 \end{figure}
-
 \subsection{Update user information}
 \begin{figure}[H]
 \hspace*{-2.5cm} 
 \includegraphics[width=180mm]{9.png}
 \end{figure}
-
 \begin{figure}[H]
 \hspace*{-2.5cm} 
 \includegraphics[width=180mm]{10.png}
 \end{figure}
-
 \begin{figure}[H]
 \hspace*{-2.5cm} 
 \includegraphics[width=180mm]{11.png}
 \end{figure}
-
 \subsection{Delete user profile}
 \begin{figure}[ht!]
 \hspace*{-2.5cm} 
 \includegraphics[width=180mm]{12.png}
 \end{figure}
-
 \begin{figure}[ht!]
 \hspace*{-2.5cm} 
 \includegraphics[width=180mm]{ViewTestCase.png}
 \end{figure}
-
 \clearpage
-
 \subsection{Manage user information}
 \begin{figure}[ht!]
 \hspace*{-2.5cm} 
 \includegraphics[width=180mm]{13.png}
 \end{figure}
-
 \begin{figure}[ht!]
 \hspace*{-2.5cm} 
 \includegraphics[width=180mm]{14.png}
 \end{figure}
-
 \clearpage
-
 \begin{figure}[ht!]
 \center
 \includegraphics[width=60mm]{Marks.png}
 \caption{Marks}
 \end{figure}
-
 \section{Non-functional requirements}
 1.	Security\\
 2.	User interface\\
 3.	Performance\\
-
 \subsection{Security}
 \begin{itemize}
      \item It is possible to change your user privileges to admin by changing the status of the user in the URL to 'admin' at any page.\\
@@ -181,23 +146,63 @@
      A password is not required to change the password or any other user information.
      \item Users can login as other users by changing the user field in the URL to any valid user name.
    \end{itemize}
-
 \subsection{User interface}
 •	Features are hidden based on user status i.e. manage users tab is hidden to guest users, but is visible to admin users\\
-
 \subsection{Performance}
 \begin{figure}[H]
 \includegraphics[width=60mm]{15.png}
 \end{figure}
 Performance-wise the pages were relatively fast and had nearly no noticeable loading time.
-\end{document}
-
 \section{Notifications}
-
 \section{Data}
-
 \section{GIS}
-
+\section{Service Contracts}
+1.	Service GIS request\\
+	a.	Get XYZ coordinates of a named location\\
+2.	Add GIS information\\
+	a.	Add a location with coordinates to the system\\
+3.	Modify GIS information\\
+4.	Remove GIS information\\
+5.	Update GIS Map\\
+6.	Modify GIS Map\\
+\subsection{Service GIS request}
+\begin{figure}[ht!]
+\hspace*{-2.5cm} 
+\includegraphics[width=180mm]{ServiceGISReq.png}
+\end{figure}
+\subsection{Add GIS information}
+\begin{figure}[ht!]
+\hspace*{-2.5cm} 
+\includegraphics[width=180mm]{AddGISInformation.png}
+\end{figure}
+\subsection{Modify GIS information}
+\begin{figure}[H]
+\label{tab:example}
+\hspace*{-2.5cm} 
+\includegraphics[width=180mm]{ModifyGISInformation.png}
+\end{figure}
+\subsection{Remove GIS information}
+\begin{figure}[ht!]
+\hspace*{-2.5cm} 
+\includegraphics[width=180mm]{DeleteGISInformation.png}
+\end{figure}
+\subsection{Update GIS Map}
+\begin{figure}[H]
+\hspace*{-2.5cm} 
+\includegraphics[width=180mm]{UpdateGISMap.png}
+\end{figure}
+\subsection{Modify GIS Map}
+There is no functionality to modify the given map.
+\section{Non-functional requirements}
+\begin{figure}[H]
+\hspace*{-2.5cm} 
+\includegraphics[width=180mm]{NFRMarks.png}
+\end{figure}
+\subsection{User interface}
+•	The interface for adding GIS information is confusing. After saving the required information into the database, the information stays open and you cannot enter a new object until you refresh the page.
+•	There is no limit on how far the user can zoom in and out. This leaves the user fully able to see the entire world map and view other locations, which should not be able to happen in the NavUp application.
+•	The map can be dragged outside the boundaries of campus. This is not in the scope of the application.
+•	The interface for GIS data modification is confusing. The labels do not guide the user in what he or she is doing in any way. 
 \section{Points of interest}
-
 \section{Navigation}
+\end{document}
