Added my name and notifications
Added my name to the names part and added the first part of my work.

--- a/main.tex
+++ b/main.tex
@@ -24,7 +24,7 @@
 		\hline
 		\textbf{Surname, First Name  }	& \textbf{Student Number}	\\ \hline \hline
 		   Merissa Joubert &15062440	\\ \hline
-		  &	\\ \hline
+		  Corne Els &14148872	\\ \hline
 		  &	\\ \hline
 	    	 &	\\ \hline
 		van der Westhuizen Idrian&15078729\\ \hline
@@ -154,6 +154,21 @@
 \end{figure}
 Performance-wise the pages were relatively fast and had nearly no noticeable loading time.
 \section{Notifications}
+\section{Service Contracts}
+1.	Send Notification\\
+
+\subsection{Send Notification}
+\begin{figure}[H]
+    \label{tab:example}
+\hspace*{-2.5cm} 
+\includegraphics[width=180mm]{5.png}
+\end{figure}
+
+\begin{figure}[H]
+\hspace*{-2.5cm} 
+\includegraphics[width=180mm,height=90mm]{NotificationsTest.png}
+\end{figure}
+
 \section{Data}
 \section{GIS}
 \section{Service Contracts}
