Forgot to add my name to the latex doc

--- a/main.tex
+++ b/main.tex
@@ -29,6 +29,8 @@
 	    	 &	\\ \hline
 		van der Westhuizen Idrian&15078729\\ \hline
 		 &	\\ \hline
+		 Dinake Keoagile&15041744\\ \hline
+		 &	\\ \hline
 		\hline
 	\end{tabu}
 
