changed a spelling error I saw.

--- a/main.tex
+++ b/main.tex
@@ -25,9 +25,7 @@
 		\textbf{Surname, First Name  }	& \textbf{Student Number}	\\ \hline \hline
 		   Merissa Joubert &15062440	\\ \hline
 		  Corne Els &14148872	\\ \hline
-		  &	\\ \hline
-	    	 &	\\ \hline
-		van der Westhuizen Idrian&15078729\\ \hline
+		Idrian van der Westhuizen&15078729\\ \hline
 		 &	\\ \hline
 		 Dinake Keoagile&15041744\\ \hline
 		 &	\\ \hline
