--- a/main.tex
+++ b/main.tex
@@ -238,26 +238,26 @@ There is no functionality to modify the given map.
 \subsubsection{Functional Requirement Rating}
 \begin{figure}[H]
 \hspace*{-2.5cm}
-\includegraphics[width=180cm]{mark-tbl-poi.png}
+\includegraphics[width=180mm]{mark-tbl-poi.png}
 \end{figure}
 \subsubsection{Comment Index}
 \begin{figure}[H]
 \hspace*{-2.5cm}
-\includegraphics[width=180cm]{comments-poi.png}
+\includegraphics[width=180mm]{comments-poi.png}
 \end{figure}
 \subsubsection{Figures}
 \begin{figure}[H]
 \hspace*{-2.5cm}
-\includegraphics[width=180cm]{fig1-2-poi.png}
+\includegraphics[width=180mm]{fig1-2-poi.png}
 \end{figure}
 \begin{figure}[H]
 \hspace*{-2.5cm}
-\includegraphics[width=180cm]{fig3-4-poi.png}
+\includegraphics[width=180mm]{fig3-4-poi.png}
 \end{figure}
 \subsubsection{Conclusion}
 \begin{figure}[H]
 \hspace*{-2.5cm}
-\includegraphics[width=180cm]{conclusion-poi.png}
+\includegraphics[width=180mm]{conclusion-poi.png}
 \end{figure}
 \section{Navigation}
 \subsection{Service Contracts}
